--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href=""></a>Studio</li>
-          <li><a href=""></a>Portfolio</li>
+          <li><a href="portfolio.html"></a>Portfolio</li>
           <li><a href=""></a>Contacts</li>
         </ul>
       </nav>
@@ -133,13 +133,16 @@
       </section>
     </header>
     <footer>
-      <div>
-        <img src="./images/Logo.svg" alt="logo" />
-
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
-        marketing & growth solutions.
-      </div>
+        <section>
+            <img src="./images/Logo.svg" alt="logo" />
+    
+          <p>
+            Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+          </p>
+    
+        </section>
     </footer>
   </body>
 </html>
