fifnsh change html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <header>
-      <a href="/index.html">
+      <a href="index.html">
         <img src="./images/Logo.svg" alt="webstudio logo" />
       </a>
       <nav>
         <ul>
-          <li><a href=""></a>Studio</li>
-          <li><a href="portfolio.html"></a>Portfolio</li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href=""></a>Contacts</li>
         </ul>
       </nav>
@@ -133,16 +133,14 @@
       </section>
     </header>
     <footer>
-        <section>
-            <img src="./images/Logo.svg" alt="logo" />
-    
-          <p>
-            Increase the flow of customers and <br />
+        <img src="./images/Logo.svg" alt="logo" />
+  
+        <p>
+          Increase the flow of customers and <br />
           sales for your business with digital <br />
           marketing & growth solutions.
-          </p>
+        </p>
+      </footer>
     
-        </section>
-    </footer>
   </body>
 </html>
