--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+    <link rel="css\styles.css" href="styleshyt">
   </head>
   <body>
     <header>
@@ -40,47 +41,65 @@
       <section>
         <ul>
           <li>
-            <img src="images/1.jpg" alt="Banking" />
+            <img src="images/1.jpg" alt="Banking" 
+            width="360"
+            height="300"/>
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="images/2.jpg" alt="Cashless Payment" />
+            <img src="images/2.jpg" alt="Cashless Payment"
+            width="360"
+            height="300" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/3.jpg" alt="Meditation" />
+            <img src="images/3.jpg" alt="Meditation"
+            width="360"
+            height="300" />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="images/4.jpg" alt="Taxi" />
+            <img src="images/4.jpg" alt="Taxi"
+            width="360"
+            height="300" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/5.jpg" alt="phone" />
+            <img src="images/5.jpg" alt="phone"
+            width="360"
+            height="300" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="images/6.jpg" alt="Online" />
+            <img src="images/6.jpg" alt="Online"
+            width="360"
+            height="300" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/7.jpg" alt="Instagram Stories" />
+            <img src="images/7.jpg" alt="Instagram Stories"
+            width="360"
+            height="300" />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="images/8.jpg" alt="Organic Food" />
+            <img src="images/8.jpg" alt="Organic Food"
+            width="360"
+            height="300" />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="images/9.jpg" alt="Cup of Coffee" />
+            <img src="images/9.jpg" alt="Cup of Coffee"
+            width="360"
+            height="300" />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
