--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
+      <a href="./index.html">
         <img src="./images/Logo.svg" alt="webstudio logo" />
+       
       </a>
       <nav>
         <ul>
@@ -134,7 +135,7 @@
     </header>
     <footer>
         <img src="./images/Logo.svg" alt="logo" />
-  
+         
         <p>
           Increase the flow of customers and <br />
           sales for your business with digital <br />
