--- a/portfolio.html
+++ b/portfolio.html
@@ -5,30 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="css\styles.css" href="styleshyt">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <a href="/index.html">
+  <body> 
+    <header class="heder">
+      <nav class="header-navigation">
+      <a href="./index.html" class="header-logo">
         <img src="./images/Logo.svg" alt="webstudio logo" />
-      </a>
-      <nav>
-        <ul>
-          <li><a href=""></a>Studio</li>
-          <li><a href=""></a>Portfolio</li>
-          <li><a href=""></a>Contacts</li>
+      </a>  
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link link" href=""></a>Studio</li>
+          <li class="header-item"><a class="header-link link" href=""></a>Portfolio</li>
+          <li class="header-item"><a class="header-link link" href=""></a>Contacts</li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-contact">
+          <li><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="header-phone" href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        
         <h2 hidden>achievements</h2>
         <ul>
           <li><button type="button">All</button></li>
@@ -41,65 +46,67 @@
       <section>
         <ul>
           <li>
-            <img src="images/1.jpg" alt="Banking" 
-            width="360"
-            height="300"/>
+            <img src="images/1.jpg" alt="Banking" width="360" height="300" />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="images/2.jpg" alt="Cashless Payment"
-            width="360"
-            height="300" />
+            <img
+              src="images/2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/3.jpg" alt="Meditation"
-            width="360"
-            height="300" />
+            <img src="images/3.jpg" alt="Meditation" width="360" height="300" />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="images/4.jpg" alt="Taxi"
-            width="360"
-            height="300" />
+            <img src="images/4.jpg" alt="Taxi" width="360" height="300" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/5.jpg" alt="phone"
-            width="360"
-            height="300" />
+            <img src="images/5.jpg" alt="phone" width="360" height="300" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="images/6.jpg" alt="Online"
-            width="360"
-            height="300" />
+            <img src="images/6.jpg" alt="Online" width="360" height="300" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/7.jpg" alt="Instagram Stories"
-            width="360"
-            height="300" />
+            <img
+              src="images/7.jpg"
+              alt="Instagram Stories"
+              width="360"
+              height="300"
+            />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="images/8.jpg" alt="Organic Food"
-            width="360"
-            height="300" />
+            <img
+              src="images/8.jpg"
+              alt="Organic Food"
+              width="360"
+              height="300"
+            />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="images/9.jpg" alt="Cup of Coffee"
-            width="360"
-            height="300" />
+            <img
+              src="images/9.jpg"
+              alt="Cup of Coffee"
+              width="360"
+              height="300"
+            />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
