--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      
         <ul class="list">
           <li>
             <a class="header-contact-mail link" href="mailto:info@devstudio.com"
@@ -47,17 +47,17 @@
             >
           </li>
         </ul>
-      </address>
+     
     </header>
     <main>
       <section class="hero list">
         <h2 hidden>achievements</h2>
-        <ul class="hero-button list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">app</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="list">
+          <li><button class="hero-button" type="button">All</button></li>
+          <li><button class="hero-button" type="button">Web Site</button></li>
+          <li><button class="hero-button" type="button">app</button></li>
+          <li><button class="hero-button" type="button">Design</button></li>
+          <li><button class="hero-button" type="button">Marketing</button></li>
         </ul>
       </section>
       <section class="hero-main">
@@ -137,7 +137,7 @@
     </main>
 
     <footer class="footer list">
-      <img src="./images/Logo.svg" alt="logo" />
+      <img src="./images/Logo2.svg" alt="logo" />
 
       <p class="footer-bottom">
         Increase the flow of customers and <br />
