--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,13 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
-        <img src="./images/Logo.svg" class="header-logo" alt="webstudio logo" />
-      </a>
+      <a href=".index.html" class="header-logo link">web</a>
+     <span>
+       studio
+      </span>
+      <!-- <a href="./index.html" class="header-logo link" >
+        <img src="./images/Logo.svg" alt="webstudio logo" />
+      </a> -->
 
       <nav class="navigation">
         <ul class="list">
