--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
-        <img src="./images/Logo.svg" alt="webstudio logo" />
-      </a>
+      <a href=".index.html" class="header-logo link">web</a>
+      <span> studio </span>
+      <!-- <a href="./index.html" class="header-logo link" >
+          <img src="./images/Logo.svg" alt="webstudio logo" />
+        </a> -->
       <nav>
         <ul>
           <li><a href="./index.html">Studio</a></li>
