--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <a href=".index.html" class="header-logo link">web</a>
-     <span>
+     <span class="logo-studio">
        studio
       </span>
       <!-- <a href="./index.html" class="header-logo link" >
