--- a/index.html
+++ b/index.html
@@ -16,23 +16,38 @@
   <body>
     <header>
       <a href=".index.html" class="header-logo link">web</a>
-      <span> studio </span>
+     <span class="logo-studio">
+       studio
+      </span>
       <!-- <a href="./index.html" class="header-logo link" >
-          <img src="./images/Logo.svg" alt="webstudio logo" />
-        </a> -->
-      <nav>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href=""></a>Contacts</li>
+        <img src="./images/Logo.svg" alt="webstudio logo" />
+      </a> -->
+
+      <nav class="navigation">
+        <ul class="list">
+          <li>
+            <a class="navigation link" href="./index.html"> Studio </a>
+          </li>
+          <li>
+            <a class="navigation link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="navigation link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+
+      <ul class="list">
+        <li>
+          <a class="header-contact-mail link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header-contact-phone link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+    </header>
       <section>
         <h1>Effective Solutions<br />for Your Business</h1>
         <button type="button">Order Service</button>
