--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,7 @@
   <body>
     <header>
       <a href=".index.html" class="header-logo link">web</a>
-     <span class="logo-studio">
-       studio
-      </span>
+      <span class="logo-studio"> studio </span>
       <!-- <a href="./index.html" class="header-logo link" >
         <img src="./images/Logo.svg" alt="webstudio logo" />
       </a> -->
