--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <body>
     <header>
       <a href=".index.html" class="header-logo link">web</a>
-     <span class="logo-studio">
-       studio
-      </span>
+      <span class="logo-studio"> studio </span>
       <!-- <a href="./index.html" class="header-logo link" >
         <img src="./images/Logo.svg" alt="webstudio logo" />
       </a> -->
@@ -48,115 +46,115 @@
         </li>
       </ul>
     </header>
-      <section>
-        <h1>Effective Solutions<br />for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
-      <section>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business <br />
-              problem to walk away with the <br />
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the <br />
-              brand's audience for the best price <br />
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that <br />
-              present the strongest digital growth <br />
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital <br />
-              experiences. We bring forth a deep <br />
-              passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img src="./images/monitor.jpg" alt="pc" width="360" height="300" />
-          </li>
-          <li>
-            <img src="./images/tel.jpg" alt="phone" width="360" height="300" />
-          </li>
-          <li>
-            <img
-              src="./images/laptoptel.jpg"
-              alt="laptoptel"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="mark guerrero"
-              width="264"
-              height="260"
-            />
+    <section>
+      <h1>Effective Solutions<br />for Your Business</h1>
+      <button type="button">Order Service</button>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business <br />
+            problem to walk away with the <br />
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the <br />
+            brand's audience for the best price <br />
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that <br />
+            present the strongest digital growth <br />
+            opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital <br />
+            experiences. We bring forth a deep <br />
+            passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>What are we doing</h2>
+      <ul>
+        <li>
+          <img src="./images/monitor.jpg" alt="pc" width="360" height="300" />
+        </li>
+        <li>
+          <img src="./images/tel.jpg" alt="phone" width="360" height="300" />
+        </li>
+        <li>
+          <img
+            src="./images/laptoptel.jpg"
+            alt="laptoptel"
+            width="360"
+            height="300"
+          />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/mark-guerrero.jpg"
+            alt="mark guerrero"
+            width="264"
+            height="260"
+          />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/tom-ford.jpg"
-              alt="tom ford"
-              width="264"
-              height="260"
-            />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img
+            src="./images/tom-ford.jpg"
+            alt="tom ford"
+            width="264"
+            height="260"
+          />
 
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="cemila garcia "
-              width="264"
-              height="260"
-            />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="./images/camila-garcia.jpg"
+            alt="cemila garcia "
+            width="264"
+            height="260"
+          />
 
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="daniel wilson"
-              width="264"
-              height="260"
-            />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/daniel-wilson.jpg"
+            alt="daniel wilson"
+            width="264"
+            height="260"
+          />
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </header>
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+
     <footer>
       <img src="./images/Logo.svg" alt="logo" />
 
