--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a href=".index.html" class="header-logo link">web</a>
+      <a href="./index.html" class="header-logo link">web</a>
       <span class="logo-studio"> studio </span>
       <!-- <a href="./index.html" class="header-logo link" >
         <img src="./images/Logo.svg" alt="webstudio logo" />
