--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <header>
+      <main>
     
       <nav class="navigation">
         <a href="./index.html" class="header-logo link">web</a>
@@ -46,7 +47,7 @@
         </li>
       </ul>
     </header>
-    <section>
+    <section class="hero-main-index">
       <h1>Effective Solutions<br />for Your Business</h1>
       <button type="button">Order Service</button>
     </section>
@@ -154,6 +155,7 @@
         </li>
       </ul>
     </section>
+  </main>
 
     <footer>
       <img src="./images/Logo.svg" alt="logo" />
