--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <header>
-      
       <nav class="navigation">
         <a href="./index.html" class="header-logo link">web</a>
         <span class="logo-studio"> studio </span>
@@ -48,11 +47,11 @@
     </header>
     <main>
       <section class="hero list">
-        <h2 hidden>achievements</h2>
+        <h1 hidden>achievements</h1>
         <ul class="list">
           <li><button class="hero-button" type="button">All</button></li>
           <li><button class="hero-button" type="button">Web Site</button></li>
-          <li><button class="hero-button" type="button">app</button></li>
+          <li><button class="hero-button" type="button">App</button></li>
           <li><button class="hero-button" type="button">Design</button></li>
           <li><button class="hero-button" type="button">Marketing</button></li>
         </ul>
@@ -61,7 +60,7 @@
         <ul class="hero-img list">
           <li>
             <img src="images/1.jpg" alt="Banking" width="360" height="300" />
-            <h3 class="hero-main-h3">Banking App Interface Concept</h3>
+            <h2 class="hero-main-h">Banking App Interface Concept</h2>
             <p class="hero-main-bottom">App</p>
           </li>
 
