--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <header>
       <nav class="navigation">
         <a href="./index.html" class="header-logo link"
-          >web<span class="logo-studio"> studio </span></a
+          >web<span class="logo-studio"> Studio </span></a
         >
-
         <ul class="list">
           <li>
             <a class="navigation link" href="./index.html"> Studio </a>
@@ -30,19 +29,20 @@
           <li><a class="navigation link" href="">Contacts</a></li>
         </ul>
       </nav>
-
-      <ul class="list">
-        <li>
-          <a class="header-contact-mail link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-contact-phone link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      <address class="adress">
+        <ul class="list">
+          <li>
+            <a class="header-contact-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-contact-phone link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section class="hero-main-index">
