--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,6 @@
           <li><button class="hero-button" type="button">Design</button></li>
           <li><button class="hero-button" type="button">Marketing</button></li>
         </ul>
-      </section>
-      <section class="hero-main">
         <ul class="hero-img list">
           <li>
             <img src="images/1.jpg" alt="Banking" width="360" height="300" />
@@ -71,31 +69,31 @@
               width="360"
               height="300"
             />
-            <h3 class="hero-main-h3">Cashless Payment</h3>
+            <h3 class="hero-main-h">Cashless Payment</h3>
             <p class="hero-main-bottom">Marketing</p>
           </li>
 
           <li>
             <img src="images/3.jpg" alt="Meditation" width="360" height="300" />
-            <h3 class="hero-main-h3">Meditation App</h3>
+            <h3 class="hero-main-h">Meditation App</h3>
             <p class="hero-main-bottom">App</p>
           </li>
 
           <li>
             <img src="images/4.jpg" alt="Taxi" width="360" height="300" />
-            <h3 class="hero-main-h3">Taxi Service</h3>
+            <h3 class="hero-main-h">Taxi Service</h3>
             <p class="hero-main-bottom">Marketing</p>
           </li>
 
           <li>
             <img src="images/5.jpg" alt="phone" width="360" height="300" />
-            <h3 class="hero-main-h3">Screen Illustrations</h3>
+            <h3 class="hero-main-h">Screen Illustrations</h3>
             <p class="hero-main-bottom">Design</p>
           </li>
 
           <li>
             <img src="images/6.jpg" alt="Online" width="360" height="300" />
-            <h3 class="hero-main-h3">Online Courses</h3>
+            <h3 class="hero-main-h">Online Courses</h3>
             <p class="hero-main-bottom">Marketing</p>
           </li>
 
@@ -106,7 +104,7 @@
               width="360"
               height="300"
             />
-            <h3 class="hero-main-h3">Instagram Stories Concept</h3>
+            <h3 class="hero-main-h">Instagram Stories Concept</h3>
             <p class="hero-main-bottom">Design</p>
           </li>
 
@@ -117,7 +115,7 @@
               width="360"
               height="300"
             />
-            <h3 class="hero-main-h3">Organic Food</h3>
+            <h3 class="hero-main-h">Organic Food</h3>
             <p class="hero-main-bottom">Web Site</p>
           </li>
           <li>
@@ -127,7 +125,7 @@
               width="360"
               height="300"
             />
-            <h3 class="hero-main-h3">Fresh Coffee</h3>
+            <h3 class="hero-main-h">Fresh Coffee</h3>
             <p class="hero-main-bottom">Web Site</p>
           </li>
         </ul>
