--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,10 @@
   <body>
     <header>
       <nav class="navigation">
-        <a href="./index.html" class="header-logo link">web</a>
-        <span class="logo-studio">studio </span>
-        <!-- <a href="./index.html" class="header-logo link" >
-          <img src="./images/Logo.svg" alt="webstudio logo" />
-        </a> -->
+        <a href="./index.html" class="header-logo link"
+          >web <span class="logo-studio">studio </span></a
+        >
+
         <ul class="list">
           <li>
             <a class="navigation link" href="./index.html"> Studio </a>
