--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,12 @@
 
       <ul class="list">
         <li>
-          <a class="header-contact-mail link" href="mailto:info@devstudio.com"
+          <a class="header-contact-adress link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="header-contact-phone link" href="tel:+110001111111"
+          <a class="header-contact-adress link" href="tel:+110001111111"
             >+11 (000) 111-11-11</a
           >
         </li>
