--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,8 @@
     <header>
       <nav class="navigation">
         <a href="./index.html" class="header-logo link"
-          >web <span class="logo-studio">studio </span></a
+          >web <span class="logo-studio">Studio </span></a
         >
-
         <ul class="list">
           <li>
             <a class="navigation link" href="./index.html"> Studio </a>
