--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main>
       <section class="hero-main-index">
-        <h1>Effective Solutions<br />for Your Business</h1>
+        <h1 class="hero-h">Effective Solutions<br />for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
