--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
       <section class="hero-main-index">
         <h1 class="hero-h">Effective Solutions<br />for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
       <section>
         <ul>
