--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <header>
-    
       <nav class="navigation">
         <a href="./index.html" class="header-logo link"
           >web<span class="logo-studio"> Studio </span></a
@@ -50,10 +49,11 @@
         <h1 class="hero-h">Effective Solutions<br />for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <ul>
+      <section class="hero-second-text">
+        <h2 hidden>non text</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="first-heading">Strategy</h3>
             <p>
               Our goal is to identify the business <br />
               problem to walk away with the <br />
