--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul class="list">
           <li>
             <h3 class="first-heading">Strategy</h3>
-            <p>
+            <p class="hero-p">
               Our goal is to identify the business <br />
               problem to walk away with the <br />
               perfect and creative solution.
