--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button class="hero-btn" type="button">Order Service</button>
       </section>
       <section class="hero-second-text">
-        <h2 hidden>non text</h2>
+        <h2 class="empty" hidden>non text</h2>
         <ul class="list">
           <li>
             <h3 class="first-heading">Strategy</h3>
