--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="hero-photo">
         <h2 class="hero-heading-fourth">Our Team</h2>
         <ul class="list">
           <li>
